[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Element_logic/Enemy_spawner_logic.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Enemy/Enemy_jet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Enemy/Enemy_Old_timer.tscn" type="PackedScene" id=3]

[node name="Enemy_spawner" type="Node2D"]
script = ExtResource( 1 )
enemies = [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 3 ) ]

[node name="Difficulty_timer" type="Timer" parent="."]
wait_time = 4.0

[node name="Spawn_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Spawn_locations" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Spawn_locations"]
position = Vector2( -400, -128 )

[node name="Position2D2" type="Position2D" parent="Spawn_locations"]
position = Vector2( 400, -128 )

[node name="Position2D3" type="Position2D" parent="Spawn_locations"]
position = Vector2( -400, 128 )

[node name="Position2D4" type="Position2D" parent="Spawn_locations"]
position = Vector2( 400, 128 )

[connection signal="timeout" from="Difficulty_timer" to="." method="_on_Difficulty_timer_timeout"]
